cabal-version: 2.4
name:          clc-stackage
version:       0.1.0.0
author:        Andrew Lelechenko
maintainer:    andrew.lelechenko@gmail.com

common common-lang
  default-extensions:
    ApplicativeDo
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    ExplicitNamespaces
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    StrictData

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

  build-depends:      base >=4.16.0.0 && <4.21
  default-language:   GHC2021

library utils
  import:          common-lang
  exposed-modules:
    CLC.Stackage.Utils.Exception
    CLC.Stackage.Utils.IO
    CLC.Stackage.Utils.JSON
    CLC.Stackage.Utils.Logging
    CLC.Stackage.Utils.OS
    CLC.Stackage.Utils.Paths

  build-depends:
    , aeson            >=2.0       && <2.3
    , aeson-pretty     ^>=0.8.9
    , bytestring       >=0.10.12.0 && <0.13
    , directory        ^>=1.3.5.0
    , file-io          ^>=0.1.0.0
    , filepath         >=1.4.2.1   && <1.6
    , pretty-terminal  ^>=0.1.0.0
    , text             >=1.2.3.2   && <2.2
    , time             >=1.9.3     && <1.15

  hs-source-dirs:  src/utils

library parser
  import:          common-lang
  exposed-modules:
    CLC.Stackage.Parser
    CLC.Stackage.Parser.API
    CLC.Stackage.Parser.Data.Response
    CLC.Stackage.Parser.Query

  build-depends:
    , aeson
    , bytestring
    , containers       >=0.6.3.1 && <0.8
    , filepath
    , http-client      >=0.5.9   && <0.8
    , http-client-tls  ^>=0.3
    , http-types       ^>=0.12.3
    , text
    , utils

  hs-source-dirs:  src/parser

library builder
  import:          common-lang
  exposed-modules:
    CLC.Stackage.Builder
    CLC.Stackage.Builder.Batch
    CLC.Stackage.Builder.Env
    CLC.Stackage.Builder.Package
    CLC.Stackage.Builder.Process
    CLC.Stackage.Builder.Writer

  build-depends:
    , aeson
    , containers
    , directory
    , filepath
    , process     ^>=1.6.9.0
    , text
    , utils

  hs-source-dirs:  src/builder

library runner
  import:          common-lang
  exposed-modules:
    CLC.Stackage.Runner
    CLC.Stackage.Runner.Args
    CLC.Stackage.Runner.Env
    CLC.Stackage.Runner.Report

  build-depends:
    , aeson
    , builder
    , containers
    , directory
    , filepath
    , optparse-applicative  >=0.16.1.0 && <0.19
    , parser
    , pretty-terminal
    , text
    , time
    , utils

  hs-source-dirs:  src/runner

executable clc-stackage
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , runner
    , terminal-size  ^>=0.3.4
    , text
    , time
    , utils

  hs-source-dirs: ./app
  ghc-options:    -threaded -with-rtsopts=-N

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.CLC.Stackage.Runner.Env
    Unit.CLC.Stackage.Runner.Report
    Unit.Prelude

  build-depends:
    , base
    , builder
    , containers
    , filepath
    , runner
    , tasty         >=1.1.0.3  && <1.6
    , tasty-golden  ^>=2.3.1.1
    , tasty-hunit   >=0.9      && <0.11
    , time
    , utils

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , builder
    , bytestring
    , containers
    , env-guard     ^>=0.2
    , filepath
    , runner
    , tasty
    , tasty-golden
    , text
    , time
    , utils

  hs-source-dirs: test/functional
