cabal-version: 2.4
name:          clc-stackage
version:       0.1.0.0
author:        Andrew Lelechenko
maintainer:    andrew.lelechenko@gmail.com

common common-lang
  default-extensions:
    ApplicativeDo
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    ExplicitNamespaces
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    OverloadedRecordDot
    OverloadedStrings
    StrictData

  if os(osx)
    cpp-options: -DOSX

  if os(windows)
    cpp-options: -DWINDOWS

  default-language:   GHC2021

library
  import:          common-lang
  exposed-modules:
    CLC.Stackage.Builder
    CLC.Stackage.Builder.Batch
    CLC.Stackage.Builder.Env
    CLC.Stackage.Builder.Process
    CLC.Stackage.Builder.Writer
    CLC.Stackage.Parser
    CLC.Stackage.Parser.API
    CLC.Stackage.Parser.API.CabalConfig
    CLC.Stackage.Parser.API.Common
    CLC.Stackage.Parser.API.JSON
    CLC.Stackage.Runner
    CLC.Stackage.Runner.Args
    CLC.Stackage.Runner.Env
    CLC.Stackage.Runner.Report
    CLC.Stackage.Utils.Exception
    CLC.Stackage.Utils.IO
    CLC.Stackage.Utils.JSON
    CLC.Stackage.Utils.Logging
    CLC.Stackage.Utils.OS
    CLC.Stackage.Utils.Package
    CLC.Stackage.Utils.Paths

  build-depends:
    , aeson                 >=2.0       && <2.3
    , aeson-pretty          ^>=0.8.9
    , base                  >=4.16.0.0  && <4.22
    , bytestring            >=0.10.12.0 && <0.13
    , containers            >=0.6.3.1   && <0.9
    , deepseq               >=1.4.6.0   && <1.6
    , directory             ^>=1.3.5.0
    , file-io               ^>=0.1.0.0
    , filepath              >=1.5.0.0   && <1.6
    , http-client           >=0.5.9     && <0.8
    , http-client-tls       ^>=0.3
    , http-types            ^>=0.12.3
    , optparse-applicative  >=0.16.1.0  && <0.19
    , os-string             ^>=2.0.0
    , pretty-terminal       ^>=0.1.0.0
    , process               ^>=1.6.9.0
    , text                  >=1.2.3.2   && <2.2
    , time                  >=1.9.3     && <1.15

  hs-source-dirs:  src

executable clc-stackage
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , clc-stackage
    , terminal-size  ^>=0.3.4

  hs-source-dirs: ./app
  ghc-options:    -threaded -with-rtsopts=-N

library test-utils
  import:          common-lang
  exposed-modules: Test.Utils
  build-depends:
    , base
    , tasty         >=1.1.0.3  && <1.6
    , tasty-golden  ^>=2.3.1.1

  hs-source-dirs:  test/utils

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.CLC.Stackage.Parser.API
    Unit.CLC.Stackage.Runner.Env
    Unit.CLC.Stackage.Runner.Report
    Unit.CLC.Stackage.Utils.Package
    Unit.Prelude

  build-depends:
    , base
    , clc-stackage
    , containers
    , deepseq
    , filepath
    , http-client-tls
    , tasty
    , tasty-golden
    , tasty-hunit      >=0.9 && <0.11
    , test-utils
    , time

  hs-source-dirs: test/unit
  ghc-options:    -threaded -with-rtsopts=-N

test-suite functional
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , bytestring
    , clc-stackage
    , containers
    , env-guard     ^>=0.2
    , filepath
    , tasty
    , tasty-golden
    , test-utils
    , text
    , time

  hs-source-dirs: test/functional
